Final tested version

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,46 @@
 /scripts/ChituUpgrade.bin
 /scripts/ChituUpgrade.bin.out
-/scripts/APPS-ARM/
+/original/
+/rootfs/
+/scripts/wsdd2-1.8.7/
+/scripts/parameter/
+/scripts/rootfs/
+/scripts/customer/
+/scripts/miservice/
+/scripts/appconfigs/
+/scripts/ChituFPGA.bin
+/scripts/kernel.es.crc
+/scripts/appconfigs.es
+/scripts/ipl.es.crc
+/scripts/customer.out.es.crc
+/scripts/kernel.es
+/scripts/customer.out.es
+/scripts/cis.es
+/scripts/customer.es.crc
+/scripts/cis.es.1
+/scripts/ipl_cust.es
+/scripts/appconfigs.out.es
+/scripts/cis.es.1.crc
+/scripts/cis.es.crc
+/scripts/appconfigs.out.es.crc
+/scripts/customer.es
+/scripts/ipl.es
+/scripts/ipl_cust.es.crc
+/scripts/appconfigs.es.crc
+/scripts/parameter.es.crc
+/scripts/rootfs.out.es.crc
+/scripts/rootfs.out.es
+/scripts/uboot.es.crc
+/scripts/parameter.out.es.crc
+/scripts/logo.es
+/scripts/parameter.es
+/scripts/miservice.es
+/scripts/rootfs.es
+/scripts/rootfs.es.crc
+/scripts/parameter.out.es
+/scripts/wsdd2-1.8.7.tar.gz
+/scripts/uboot.es
+/scripts/miservice.es.crc
+/scripts/miservice.out.es.crc
+/scripts/logo.es.crc
+/scripts/miservice.out.es
