Added customerStart c souces

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@
 /scripts/miservice.out.es.crc
 /scripts/logo.es.crc
 /scripts/miservice.out.es
+/newFirmware/
+/customerStart/customerStart
+/customerStart/main.o
